# simple-agent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  options.cmake
.github/workflows/: cmake-checks.yml
cmake/: clang-format.cmake  fmt.cmake  gtest.cmake  yaml-cpp.cmake
skills/c++-expert/: SKILL.md
src/: CMakeLists.txt  README.md  agent.cpp  agent.h  agent_unittest.cpp  main.cpp  message.cpp  message.h  message_unittest.cpp  permission.cpp  permission.h  permission_unittest.cpp  sandbox.cpp  sandbox.h  sandbox_unittest.cpp  skill.cpp  skill.h  tool_manager.cpp  tool_manager.h  tool_manager_unittest.cpp  tools.cpp  tools.h  tools_unittest.cpp
src/tool/: read_file.cpp
src/tools/: CMakeLists.txt  edit_file.cpp  read_file.cpp  shell.cpp  tool_factory.h  write_file.cpp
